--- a/pubsub/publisher/package.json
+++ b/pubsub/publisher/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "amqplib": "^0.10.4",
     "express": "^4.19.2",
+    "inquirer": "^9.2.20",
     "randomstring": "^1.3.0"
   }
 }
