--- a/restapi/backend/package.json
+++ b/restapi/backend/package.json
@@ -4,24 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.11",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  },
   "dependencies": {
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "log-timestamp": "^0.3.0"
+    "express": "^4.19.2"
   }
 }
