--- a/restapi/backend/package.json
+++ b/restapi/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "randomstring": "^1.3.0"
   }
 }
