--- a/restapi/backend/package.json
+++ b/restapi/backend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "log-timestamp": "^0.3.0",
     "randomstring": "^1.3.0"
   }
 }
