--- a/restapi/backend/package.json
+++ b/restapi/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "log-timestamp": "^0.3.0",
+    "moment-timezone": "^0.5.45",
     "randomstring": "^1.3.0"
   }
 }
