--- a/pubsub/publisher/package.json
+++ b/pubsub/publisher/package.json
@@ -13,6 +13,8 @@
     "amqplib": "^0.10.4",
     "express": "^4.19.2",
     "inquirer": "^9.2.20",
+    "log-timestamp": "^0.3.0",
+    "moment-timezone": "^0.5.45",
     "randomstring": "^1.3.0"
   }
 }
