--- a/pubsub/subscriber/package.json
+++ b/pubsub/subscriber/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.4",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "log-timestamp": "^0.3.0",
+    "moment-timezone": "^0.5.45"
   }
 }
